fixed broken link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3 class="color-secondary">Hello there!</h3> <!-- <h3>GENERAL KENOBI!</h3> -->
         <p>I am a graduate from General Assembly's Web Development Immersive course and have a degree in Accounting & Finance from The University of Melbourne.</p>
 
-        <p><a class="show-links" href="work.html">Find out more</a> about the projects that I have devoted my sweat and tears to.</p>
+        <p><a class="show-links" href="projects.html">Find out more</a> about the projects that I have devoted my sweat and tears to.</p>
 
         <p>Like anything you see? Get in touch with me at <a class="show-links" href="mailto:chrismintan91@gmail.com?Subject=Hello%20there!">chrismintan91@gmail.com</a>. I am constantly open for now challenges and opportunities.</p>
 
