--- a/projects.html
+++ b/projects.html
@@ -137,7 +137,7 @@
         </div>
         <div>
           <div class="collapse" id="collapse4text">
-            <strong>Stack: Ruby on Rails, PostgreSQL</strong>
+            <strong>Stack: React, Node.js, Express, PostgreSQL</strong>
           </div>
           <a style="color: #0F7FFEFF;" data-toggle="collapse" href="#collapse4text" aria-expanded="false" aria-controls="collapse4text">Read More!</a>
         </div>
