added current job

--- a/projects.html
+++ b/projects.html
@@ -55,9 +55,38 @@
       My
       <span class="color-secondary">Work</span>
     </h1>
-    <h2 class="sm-heading">
+
+<SECTION>
+
+<br/>
+<div class='projects'>
+  <!-- Project 4 -->
+  <div class="item">
+    <h1 class='sm-heading'>Oeuvre Connect</h1>
+    
+    <a target="_blank" href="https://oeuvreconnect.com/">
+      <img class="gifs" src="img/projects/oeuvre_ss.jpg" alt="Project">
+    </a>
+    <a target="_blank" href="https://oeuvreconnect.com/" class='btn-light' >
+      <i class="fas fa-eye"></i> Oeuvre Connect<br><br><strong>Stack: React Native, Node.js, PostgreSQL, GraphQL</strong>
+    </a>
+    <p class="btn-dark">Oeuvre is a driver-friendly mobile app that optimizes your daily delivery route.</p>
+      
+  </div>
+</div>
+
+</SECTION>
+
+<br/>
+<br/>
+
+<SECTION>
+
+    <h1 class="sm-heading">
       Check out some of my projects...
-    </h2>
+
+    </h1>
+
 
 
 
@@ -65,7 +94,7 @@
 
 <!-- Project 4 -->
 <div class="item">
-  <a target="_blank" href="https://pollplay.herokuapp.com/">
+  <a href="#project4" id="project4-tryme" data-toggle="modal" data-target="#project4">
     <img class="gifs" src="img/projects/project4-demo.gif" alt="Project">
   </a>
   <a href="#project4" class="btn-light" id="project4-tryme" data-toggle="modal" data-target="#project4">
@@ -78,7 +107,7 @@
 
 <!-- Project 3 -->
 <div class="item">
-  <a target="_blank" href="https://project-3-rumu.herokuapp.com/">
+  <a href="#project3" id="project3-tryme" data-toggle="modal" data-target="#project3">
     <img class="gifs" src="img/projects/project3-demo.gif" alt="Project">
   </a>
   <a href="#project3" class="btn-light" id="project3-tryme" data-toggle="modal" data-target="#project3">
@@ -91,7 +120,7 @@
 
 <!-- Project 2 -->
 <div class="item">
-  <a target="_blank" href="https://spot-the-fake.herokuapp.com/">
+  <a href="#" id="project2-tryme" data-toggle="modal" data-target="#project2">
     <img class="gifs" src="img/projects/project2-demo.gif" alt="Project">
   </a>
   <a href="#" class="btn-light" id="project2-tryme" data-toggle="modal" data-target="#project2">
@@ -104,7 +133,7 @@
 
 <!-- Project 1 -->
 <div class="item">
-  <a target="_blank" href="https://chrismintan.github.io/whos-that-pokemon/">
+  <a href="#" id="project1-tryme" data-toggle="modal" data-target="#project1">
     <img class="gifs" src="img/projects/project1-demo.gif" alt="Project">
   </a>
   <a href="#" class="btn-light" id="project1-tryme" data-toggle="modal" data-target="#project1">
@@ -307,6 +336,7 @@
     </div>
   </div>
 
+</SECTION>
 
   </main>
 
