--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <h3 class="color-secondary">Hello there!</h3> <!-- <h3>GENERAL KENOBI!</h3> -->
         <p>I am a graduate from General Assembly's Web Development Immersive course and have a degree in Accounting & Finance from The University of Melbourne.</p>
 
+        <p>Thanks for taking the time to stop by! I am a junior programmer with good knowledge of front-end techniques. I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web apps. Also I like working in a team, you'll learn faster and much more.</p>
+
         <p><a class="show-links" href="projects.html">Find out more</a> about the projects that I have devoted my sweat and tears to.</p>
 
         <p>Like anything you see? Get in touch with me at <a class="show-links" href="mailto:chrismintan91@gmail.com?Subject=Hello%20there!">chrismintan91@gmail.com</a>. I am constantly open for now challenges and opportunities.</p>
